// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Stepper props alignment="center" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-center-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props alignment="left" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props alignment="right" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-right-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props className="my-classname" 1`] = `
<div
  className="uu5-bricks-stepper my-classname uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props className="test-classname" 1`] = `
<div
  className="uu5-bricks-stepper test-classname uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "brown",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "brown-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "cyan",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "cyan-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "default",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "green",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "green-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "grey",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "grey-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "orange",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "orange-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "pink",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "pink-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "purple",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "purple-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "red",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "red-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "yellow",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": "yellow-rich",
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props controlled=false 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props controlled=true 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props currentStep=0 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props currentStep=7 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 7,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props default props 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props disabled=false 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props disabled=false 3`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props disabled=true 1`] = `
<div
  className="uu5-bricks-stepper uu5-common-disabled uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Stepper props disabled=true 3`] = `
<div
  className="uu5-bricks-stepper uu5-common-disabled uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Stepper props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="0" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-0 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="1" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-1 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="2" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-2 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="3" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-3 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="4" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-4 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation="5" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-5 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=0 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=1 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-1 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=2 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-2 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=3 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-3 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=4 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-4 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props elevation=5 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-common-elevation-5 uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-stepper uu-fulltextsearch-0 uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-stepper uu-fulltextsearch-0 uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props hidden=false 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props hidden=false 3`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props hidden=true 1`] = `
<div
  className="uu5-bricks-stepper uu5-common-hidden uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props hidden=true 3`] = `
<div
  className="uu5-bricks-stepper uu5-common-hidden uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props id="myId" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="myId"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props id="test-id" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="test-id"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props itemProps=undefined 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props name="myName" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Stepper props nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Stepper props nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Stepper props nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Stepper props nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props noPrint=false 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props noPrint=true 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props orientation="horizontal" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props orientation="vertical" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-vertical"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props selected=false 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props selected=true 1`] = `
<div
  className="uu5-bricks-stepper uu5-common-selected uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props size="l" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "l",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props size="m" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props size="s" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "s",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props size="xl" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "xl",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props style={"margin":8} 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props topVisitedStep=0 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 0,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;

exports[`UU5.Bricks.Stepper props topVisitedStep=5 1`] = `
<div
  className="uu5-bricks-stepper uu5-bricks-stepper-wrapper uu5-bricks-stepper-visibility uu5-bricks-stepper-left-alignment"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-stepper-inner uu5-bricks-stepper-horizontal"
  >
    <ContextProvider
      key="0"
      value={
        Object {
          "colorSchema": null,
          "currentStep": 0,
          "disabled": false,
          "index": 0,
          "itemProps": Object {
            "bgStyle": "transparent",
            "borderRadius": null,
            "elevation": null,
          },
          "onClick": null,
          "size": "m",
          "topVisitedStep": 5,
        }
      }
    >
      <forwardRef(StepperItem)
        id="childID"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
      </forwardRef(StepperItem)>
    </ContextProvider>
  </div>
</div>
`;
